fix pointer event bug on mobile

--- a/styles/layout.module.css
+++ b/styles/layout.module.css
@@ -79,7 +79,6 @@
 
   .header nav {
     align-items: flex-end;
-    pointer-events: none;
     inset: auto 0 0;
     padding: 2rem;
     height: 200px;
